# xenia

./: CMakeLists.txt  TODO.md  premake5.lua  xenia-build
src/xenia/: memory.cc
src/xenia/app/: xenia_main.cc
src/xenia/base/: filesystem_posix.cc  logging.cc  mapped_memory_posix.cc  memory_posix.cc  threading_posix.cc
src/xenia/cpu/: stack_walker.h
src/xenia/cpu/backend/x64/: x64_backend.cc  x64_stack_layout.h
src/xenia/kernel/: kernel_state.cc  user_module.cc  xmodule.cc
src/xenia/kernel/xam/: app_manager.h
src/xenia/ui/vulkan/: vulkan_context.cc  vulkan_immediate_drawer.cc  vulkan_provider.cc
src/xenia/vfs/devices/: host_path_device.cc
